[package]
name = "tp"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29" # GUI
egui = "0.29"
tokio = { version = "1.41", features = ["full"] } # Async runtime
axum = { version = "0.7", features = ["multipart"] } # Web server
axum-server = { version = "0.7", features = ["tls-rustls"], default-features = false } # HTTPS
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
arboard = "3.4" # Clipboard
local-ip-address = "0.6"
qr_code = "2.0"
rcgen = { version = "0.13"} # Certificate generation
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5" # For communication between GUI and Server
image = "0.25" # For loading icons

[build-dependencies]
winres = "0.1"
image = "0.25"
